# cresser

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  codecov.yml  coverage.info  coverage.sh
.github/workflows/: cmake.yml
resources/text/: BIG_TEST.txt  SMALL_TEST.txt
src/: CMakeLists.txt  main.cpp
src/encoding/: CMakeLists.txt  encoder.cpp  encoder.h  lz77encoder.cpp  lz77encoder.h
src/fileio/: CMakeLists.txt  operations.cpp  operations.h
src/parser/: CMakeLists.txt  hashtable.h  parser.cpp  parser.h
tests/: CMakeLists.txt
tests/encoding/: CMakeLists.txt  encoder_test.cpp  lz77_encoder_test.cpp
tests/fileio/: CMakeLists.txt  operations_test.cpp  read_test.cpp
tests/parser/: CMakeLists.txt  argument_multimap_test.cpp  hashtable_test.cpp
